--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,40 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    <title>{% block title %}Scoreboard!{% endblock %}</title>
     {% block stylesheets %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+              crossorigin="anonymous">
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
-
     {% block javascripts %}
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+                integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
 <body>
+<nav
+        class="navbar navbar-expand-lg navbar-light bg-light px-1"
+>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{{ path('app_view_action') }}">
+            <p class="pl-2 d-inline font-weight-bold" style="color: #444;">
+                Scoreboard!</p>
+        </a>
+        <div class="collapse navbar-collapse" id="navbar-collapsable">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="">Add Event</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Scoreboard</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 {% block body %}{% endblock %}
 </body>
 </html>
