--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapsable">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Add Event</a>
+                    <a class="nav-link" href="{{ path('app_add_action') }}">Add Event</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="">Scoreboard</a>
@@ -36,6 +36,12 @@
         </div>
     </div>
 </nav>
+{% for flash in app.flashes('success') %}
+    <div class="alert alert-success">{{ flash }}</div>
+{% endfor %}
+{% for flash in app.flashes('error') %}
+    <div class="alert alert-danger">{{ flash }}</div>
+{% endfor %}
 {% block body %}{% endblock %}
 </body>
 </html>
