--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="{{ path('app_add_action') }}">Add Event</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Scoreboard</a>
+                    <a class="nav-link" href="{{ path('app_summary_action') }}">Summary</a>
                 </li>
             </ul>
         </div>
